refractor: code corrected

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <img id="groot-img" src="/images/groot.png" />
         <h1>----- Groot Speak -----</h1>
     </nav>
-    <main><textarea id="txt-input"
-            placeholder="Put your sentence in English and see how does groot speaks it..."></textarea>
-        <button id="btn-translate">- Translate -</button>
+    <main><textarea 
+        id="txt-input"
+        placeholder="Put your sentence in English and see how does groot speaks it..."></textarea>
+        <button id="btn-translate"> - Translate - </button>
 
         <div id="output-msg">Output will be displayed below👇</div>
         <div id="output"></div>
